syntax = "proto3";

package no.mattilsynet.ephyto.api.imports.envelope.v1;

option java_multiple_files = true;
option java_package = "no.mattilsynet.ephyto.api.imports.envelope.v1";
option java_outer_classname = "EnvelopeHeaderDtoOuterClass";

import "google/protobuf/timestamp.proto";
import "blob_storage_metadata/v1/BlobStorageMetadata.proto";

// @See generated (after running '% ./gradlew build'): '_int.ippc.ephyto.hub.EnvelopeHeader'
message EnvelopeHeaderDto {
  string from = 1;
  string to = 2;
  int32 certificateType = 3;
  int32 certificateStatus = 4;
  string nppoCertificateNumber = 5;
  string hubDeliveryNumber = 6;
  string hubTrackingInfo = 7;
  string hubDeliveryErrorMessage = 8;
  ArrayOfEnvelopeForwardings arrayOfEnvelopeForwardings = 9;
}

message ArrayOfEnvelopeForwardings {
  repeated EnvelopeForwarding envelopeForwardings = 1;
}

message EnvelopeForwarding {
  string code = 1;
  string hubDeliveryNumber = 2;
}


